@@ -1,5 +1,12 @@
 2014-08-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el (soap-xs-simple-type): Add is-list slot.
+	(soap-xs-parse-simple-type): Call soap-xs-add-list for xsd:list
+	nodes.
+	(soap-xs-add-list): New function.
+
+2014-08-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-client.el (soap-encode-xs-element): When a boolean is
 	expected, interpret nil as "false".
 
